# mock-oracles

./: 4chuDREDK5YVUrjE877CoZbEr1bzcdS674yDzSB9mYgM.json  Anchor.toml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
programs/mock-oracles/: Cargo.toml
programs/mock-oracles/src/: lib.rs
src/: constants.ts  index.ts
tests/: mock-oracles.spec.ts  workspace.ts
