[package]
name = "mock-oracles"
version = "0.1.1"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_oracles"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
pyth-sdk-solana = "0.9.0"
switchboard-v2 = "0.4.0"
bytemuck = "1.14.0"
